--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title></title>
 </head>
 <body>
-	<button onclick="bgcolor();">click me cunt</button>
+	<button onclick="bgcolor();">click me</button>
 
 <script src="script.js"></script>
 </body>
